# squirrel_perception

./: .gitignore  .travis.install.sh  .travis.yml  README.md
dlib/: CMakeLists.txt  package.xml
squirrel_active_exploration/: CMakeLists.txt  CMakeLists.txt.bkp  README.md  package.xml  parameters_run_with_dataset.txt  parameters_run_with_robot.txt  readme.md
squirrel_active_exploration/launch/: active_exploration.launch  active_exploration_server.launch  entropy_map.launch  map_coverage.launch  map_coverage_server.launch  navigation.launch  robot_controller.launch  robotino_sim.launch  run_dataset.launch  run_robot_experiment.launch  startup.launch  test_active_exploration_server.launch  test_entropy_map.launch  test_map_coverage_server.launch
squirrel_active_exploration/msg/: ViewpointEntropy.msg
squirrel_active_exploration/python/: search_invalid_objects.py  visualization_utils.py  visualize_all_planners.py  visualize_instance_entropy.py  visualize_min_views.py  visualize_results.py
squirrel_active_exploration/run/: generate_all_sets.sh  generate_all_sets_desktop.sh  generate_one_set.sh  generate_random.sh
squirrel_active_exploration/src/: PointCloud2PCD.cpp  active_exploration.cpp  active_exploration_utils.cpp  entropy_map.cpp  fake_action_server.cpp  file_utils.cpp  ground_removal.cpp  io_utils.cpp  manual_adjust_point_cloud.cpp  math_utils.cpp  octomap_utils.cpp  pc_utils.cpp  planning_utils.cpp  pose_to_transform.cpp  refine_transformations.cpp  robot_controller.cpp  squirrel_active_exploration.cpp  squirrel_active_exploration_server.cpp  squirrel_map_coverage.cpp  squirrel_map_coverage_server.cpp  squirrel_run_robot_experiment.cpp  squirrel_run_with_dataset.cpp  transform_utils.cpp  visualization_utils.cpp
squirrel_active_exploration/srv/: CoveragePlan.srv  CoveragePlanFile.srv  EntropyMap.srv  EntropyMapViz.srv
squirrel_active_exploration/test/: TidyRoom.cpp  boost_graph_extension.cpp  boost_graph_extension.h  save_segment_indices.cpp  test_SIFT_align.cpp  test_active_exploration_server.cpp  test_active_exploration_server_robot.cpp  test_entropy_map.cpp  test_load_set.cpp  test_map_coverage_server.cpp  test_math_utils.cpp  test_octomap_utils.cpp  test_plan.cpp  test_robot_controller.cpp  test_transform_utils.cpp  test_update.cpp
squirrel_attention/: CMakeLists.txt  attention.xml  package.xml
squirrel_attention/.kdev4/: squirrel_attention.kdev4
squirrel_attention/include/: squirrel_attention_base.hpp  squirrel_attention_color.hpp  squirrel_attention_height.hpp  squirrel_attention_itti.hpp  squirrel_attention_location.hpp  squirrel_attention_surfaceorientation.hpp
squirrel_attention/launch/: fixate_on_3d_point.launch  person.launch  startup.launch
squirrel_attention/model/: squirrel_attention.ros_package
squirrel_attention/src/: AttentionController.cpp  AttentionFusion.cpp  AttentionLegs.cpp  AttentionMotion.cpp  fixate_on_3D_point.cpp  squirrel_attention_3Dsymmetry.cpp  squirrel_attention_color.cpp  squirrel_attention_height.cpp  squirrel_attention_itti.cpp  squirrel_attention_location.cpp  squirrel_attention_surfaceorientation.cpp  squirrel_attention_symmetry.cpp  test.cpp
squirrel_attention/test/: squirrel_attention_3Dsymmetry_test.cpp  squirrel_attention_base_test.hpp  squirrel_attention_color_test.cpp  squirrel_attention_height_test.cpp  squirrel_attention_itti_test.cpp  squirrel_attention_location_test.cpp  squirrel_attention_location_test.test  squirrel_attention_surfaceorientation_test.cpp  squirrel_attention_symmetry_test.cpp
squirrel_classification/: CMakeLists.txt  classifier.xml  package.xml
squirrel_classification/launch/: startup.launch
squirrel_classification/src/: classifier.cpp  shape_simple_classifier_node.cpp
squirrel_object_perception/: CMakeLists.txt  README.md  find_dynamic_objects.xml  package.xml  setup.py
squirrel_object_perception/cfg/: squirrel_grasp_objects.cfg  squirrel_look_for_objects.cfg
squirrel_object_perception/include/: OctomapLib.h  RobotTracker.h  post_process_static_octomap.h  squirrel_check_grasp_success.h  squirrel_find_dynamic_objects_server.h  squirrel_find_lumps_via_waypoints.h  squirrel_fuse_lumps_static_octomap.h
squirrel_object_perception/launch/: alufr-robotino2.launch  post_process_static_octomap.launch  squirrel_find_lumps_via_waypoints.launch  startup.launch  test_find_dyn_objects.launch  test_poses.txt  tuw-robotino2.launch  tuw.launch  uibk-robotino2.launch  uibk.launch
squirrel_object_perception/src/: OctomapLib.cpp  RobotTracker.cpp  call_haf_grasping.cpp  post_process_static_octomap.cpp  squirrel_check_grasp_success.cpp  squirrel_find_dynamic_objects_server.cpp  squirrel_find_lumps_via_waypoints.cpp  squirrel_fuse_lumps_static_octomap.cpp  squirrel_look_for_objects.py  squirrel_look_for_objects_in_hand.cpp  squirrel_look_for_objects_server.cpp  squirrel_look_for_objects_server.cpp.orig  squirrel_object_perception.py  squirrel_recognize_objects.cpp  squirrel_recognize_objects_server.cpp
squirrel_object_perception/test/: test_look_for_objects_squirrel_object_perception.py  test_squirrel_look_for_objects_squirrel_object_perception.py
squirrel_perception/: CMakeLists.txt  get_v4r.py  install.sh  package.xml  ros-indigo-v4r_1.3.1-0trusty-20160113-1651-+0000_amd64.deb  ros-indigo-v4r_1.4.1-0trusty-20160201-1048-+0000_amd64.deb  setup.bash  setup.sh  setup.zsh
squirrel_perception/rosdep/: 31-squirrel_perception.list  private.yaml
squirrel_recognition/: CMakeLists.txt  ReadMe.md  package.xml  recognizer.xml
squirrel_recognition/cfg/: camera.xml  hv_config.xml
squirrel_recognition/launch/: startup.launch  startup_wizard.launch
squirrel_recognition/src/: recognizer2d_ros.cpp  recognizer_ros.cpp  recognizer_wizard.cpp  test_recognizer.cpp  test_recognizer2d.cpp  test_recognizer_wizard.cpp
squirrel_segmentation/: CMakeLists.txt  README.md  package.xml  segmentation.xml
squirrel_segmentation/include/: squirrel_segmentation_incremental.hpp
squirrel_tracking/: CMakeLists.txt  README.md  package.xml  tracker.xml
v4r/: CMakeLists.txt  README.md  package.xml
(+1436 files in other folders)
