<?xml version="1.0"?>
<package>
  <name>dlib</name>
  <version>18.18</version>
  <description>DLIB C++ library as catkin package</description>

  <maintainer email="markus.bajones@gmail.com">Markus "Bajo" Bajones</maintainer>
  <license>Boost Software License</license>
  <url type="website">http://dlib.net</url>
  <buildtool_depend>catkin</buildtool_depend>

</package>
