<?xml version="1.0"?>
<package>
  <name>squirrel_active_exploration</name>
  <version>0.0.0</version>
  <description>The squirrel_active_exploration package</description>

  <maintainer email="t.patten@acfr.usyd.edu.au">Tim Patten</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/squirrel_active_exploration</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>squirrel_object_perception_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>squirrel_classification</run_depend>
  <run_depend>squirrel_object_perception</run_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>
  <run_depend>squirrel_segmentation</run_depend>
  <run_depend>squirrel_tracking</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>visualization_msgs</run_depend>

  
</package>
