<?xml version="1.0"?>
<package>
  <name>squirrel_classification</name>
  <version>0.0.0</version>
  <description>The squirrel_classification package</description>

  <maintainer email="faeulhammer@acin.tuwien.ac.at">Thomas Fäulhammer</maintainer>
  <maintainer email="bajones@acin.tuwien.ac.at">Markus 'Bajo' Bajones</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/squirrel_classification</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>squirrel_object_perception_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  
</package>
